--- a/personal/nbproject/project.properties
+++ b/personal/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/personal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqlite-jdbc-3.8.11.1.jar=F:\\pryects java\\appVictoria\\sqlite-jdbc-3.8.11.1.jar
+file.reference.swingx-all-1.6.4.jar=../swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.8.11.1.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.1.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
