corrigiendo error de combox tipo -xlint

--- a/personal/nbproject/project.properties
+++ b/personal/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 file.reference.sqlite-jdbc-3.8.11.1.jar=F:\\pryects java\\appVictoria\\sqlite-jdbc-3.8.11.1.jar
 file.reference.swingx-all-1.6.4.jar=../swingx-all-1.6.4.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.8.11.1.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}
