--- a/personal/nbproject/project.properties
+++ b/personal/nbproject/project.properties
@@ -29,13 +29,21 @@ dist.jar=${dist.dir}/personal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.poi-3.14-20160307.jar=..\\poi-3.14-20160307.jar
+file.reference.poi-ooxml-3.14-20160307.jar=..\\poi-ooxml-3.14-20160307.jar
+file.reference.poi-ooxml-schemas-3.14-20160307.jar=..\\poi-ooxml-schemas-3.14-20160307.jar
 file.reference.sqlite-jdbc-3.8.11.1.jar=F:\\pryects java\\appVictoria\\sqlite-jdbc-3.8.11.1.jar
 file.reference.swingx-all-1.6.4.jar=../swingx-all-1.6.4.jar
+file.reference.xmlbeans-2.6.0.jar=..\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.8.11.1.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.poi-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
