--- a/personal/nbproject/project.properties
+++ b/personal/nbproject/project.properties
@@ -45,7 +45,7 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=false
 javac.processorpath=\
